Release 1.1

#8 'MatchingTaskBuilder.matchBy' to take Property<?> instead of String
#9 Matcher refactoring
#10 KeyBuilder refactoring - renaming to KeyMapAdapter
#11 Rename MatchingTaskBuilder.matchByPrimaryKey to matchById
#13 EtlAdapter to package extensions to LinkETL
#14 Rename "transform" package to "load"
#15 Rename Matchers to Mappers
#16 ClasspathExtractorConfigLoader incorrectly resolves resource URLs
#17 Disallow ID updates for auto-generated IDs
#18 JdbcExtractorFactory - trim SQL and other properties comping from XML
#19 Task update count includes related objects
#20 ETL fails to reset non-null properties to NULL on update

Release 1.0 2014-08-13

[open sourcing LinkETL]

