@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- ETL within the same DB; connector ID == DataNode name == 'datanode' -->
+<config>
+	<type>jdbc</type>
+	<connectorId>datanode</connectorId>
+	<attributes>
+		<attribute>
+			<type>java.lang.String</type>
+			<source>NAME</source>
+			<target>name</target>
+		</attribute>
+	</attributes>
+	<properties>
+		<extractor.jdbc.sqltemplate>
+			<![CDATA[SELECT name FROM utest.etl1t
+			]]>
+		</extractor.jdbc.sqltemplate>
+	</properties>
+</config>
